# bench-radix

./: Cargo.toml  README.md
benches/: congee_benches.rs  radix_trie_benches.rs
data/: gen.py  prompts.txt  requirements.txt
src/: main.rs
