[package]
name = "bench-radix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
congee = "0.3.0"
criterion = "0.5.1"
radix_trie = "0.2.1"
# #![feature]` may not be used on the stable release channel
# rax = "0.1.5"

[dev-dependencies]
criterion = "0.5.1"

#[[bench]]
#name = "radix_trie_benches"
#harness = false

[[bench]]
name = "congee_benches"
harness = false